--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,12 @@ header h1 {
 	font-family: inherit;
 	font-weight: bold;	
 	padding: 9px 36px;
-	background-color: rgba(255, 239, 0, .6);
-	transition: background-color .4s ease-in-out;
+	background-color: rgba(34, 167, 240, 1);
+	transition: background-color .2s ease-in-out;
 }
 
 .refresh:hover {
-	background-color: rgba(255, 239, 0, 1);
+	background-color: rgba(34, 167, 240, .7);
 }
 
 .container {
@@ -78,6 +78,8 @@ header h1 {
 .btn-controls {
 	position: absolute;
 	background-color: rgba(0,0,0, .3);
+	border: none;
+	cursor: pointer;
 	top: 50%;
 	padding: 8px 16px;
 	border-radius: 50%;
@@ -91,7 +93,11 @@ header h1 {
 
 .btn-controls:hover {
 	background-color: rgba(0,0,0, .4);
-	cursor: pointer;
+}
+
+.btn-controls--disabled {
+	background-color: rgba(0,0,0, .4);
+	cursor: default;
 }
 
 .prev {
@@ -123,15 +129,21 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 @media(min-width: 320px) and (max-width: 640px) {
+
+	header h1 {
+		padding-top: 1.5em;
+	}
+
 	.container {
 		width: 100%;
 	}
-
+	
 	.btn-controls {
 		position: static;
 		border-radius: 0;
-		width: 40%;
+		width: 31%;
 		margin: 4%;
+		display: inline-block;
 	}
 
 	.count {
